local database setup

--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,24 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8086
+    },
+    "database": {
+      "port": 9000
+    },
+    "ui": {
+      "enabled": true,
+      "port": 10878
+    },
+    "singleProjectMode": true
   }
 }
