--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "vitest",
     "eject": "react-scripts eject",
     "cy:open": "cypress open",
     "em:start": "firebase emulators:start --import=./saved-data --export-on-exit",
     "em:exec": "firebase emulators:exec --import=./saved-data 'npm start'",
     "em:execui": "firebase emulators:exec --ui --import=./saved-data 'npm start'"
-
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^13.3.3"
+    "cypress": "^13.3.3",
+    "vitest": "^0.34.6"
   }
 }
